--- a/style.css
+++ b/style.css
@@ -14,8 +14,10 @@ body {
     background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
-    background-position: top;
+    background-position: center;
     backdrop-filter: blur(7px);
+    min-height: 100vh; 
+    margin: 0; 
 }
 
 body::before {
@@ -33,7 +35,9 @@ body::before {
 main .main-aug {
     --aug-border-bg: var(--primary-red);
     --aug-border-all: 1px;
+    --aug-border-top: 4px;
 }
+
 
 main .section-1-aug {
     --aug-border-bg: var(--primary-red);
@@ -69,6 +73,21 @@ main .cmd-content {
     scrollbar-width: 2px;
 }
 
+main .custom-model-viewer {
+    position: relative;
+    --aug-tl: 1rem;
+    --aug-border-all: 1px;
+    --aug-border-bg: var(--primary-yellow);
+    --aug-opacity-bg: 0.7;
+    --aug-inlay-opacity: 0.5;
+    --aug-inlay-bg: #1E1E1C;
+
+}
+
+
+main .btn.active {
+    --aug-border-bg: var(--primary-cyan);
+}
 
 
 /* .section-1 code,
@@ -111,11 +130,6 @@ main .code-type-label {
     position: fixed;
     bottom: 0;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
-    /* Example background color */
-    color: white;
-    /* Example text color */
-    padding: 20px;
     text-align: center;
 }
 
@@ -152,3 +166,4 @@ main .code-type-label {
 *::-webkit-scrollbar-thumb:hover {
     background-color: var(--primary-yellow);
 }
+
